--- a/abc/config-repository/userservice1-dev.yml
+++ b/abc/config-repository/userservice1-dev.yml
@@ -20,3 +20,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8888/eureka,http://localhost:9999/eureka
+      
+      
+serviceVersion: 1.0
